tests/sumo/errors/invalid_time/errors.sumo
Error: Invalid Number Format (double) invalidInput
Quitting (on error).
